--- a/tasksapp/tasks-ui/package.json
+++ b/tasksapp/tasks-ui/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
     "jquery": "^3.2.1",
+    "ng2-toastr": "^4.1.2",
     "popper.js": "^1.12.9",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
