--- a/tasksapp/tasks-ui/package.json
+++ b/tasksapp/tasks-ui/package.json
@@ -24,6 +24,7 @@
     "angular2-jwt": "^0.2.3",
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "ng2-daterangepicker": "^2.0.12",
     "ng2-toastr": "^4.1.2",
